# pkg/d/identity.go
@@ -1,0 +1,6 @@
+package d
+
+type Identity struct {
+	Account  *Account
+	Profiles []*Profile
+}
